<resources>
    <string name="app_name">Campus Discovery</string>
    <string name="new_event_description">New Event Description</string>
    <string name="edit_event">Edit Event</string>
    <string name="new_event_time">New Event Time</string>
    <string name="new_event_location">New Event Location</string>
    <string name="new_event_title">New Event Title</string>
    <string name="done">Done</string>
    <string name="back">Back</string>
    <string name="create_event">Create Event</string>
    <string name="event_location">Event Location</string>
    <string name="event_time">Event Time</string>
    <string name="event_title">Event Title</string>
    <string name="add_new_event">Add New Event</string>
    <string name="event_description">Event Description</string>
    <string name="welcome">Welcome!</string>
    <string name="discover_stuff_around_your_campus">Discover stuff around your campus!</string>
    <string name="campus_discovery">Campus Discovery</string>
    <string name="georgia_tech">Georgia Tech</string>
    <string name="upcoming_events">Upcoming:</string>
    <string name="events">All Events</string>
    <string name="add_event">add event</string>
    <string name="event_capacity">Event Capacity</string>
    <string name="new_event_capacity">New Event Capacity</string>

    <string-array name="userTypes">
        <item>Student</item>
        <item>Teacher</item>
        <item>Organizer</item>
    </string-array>

    <string-array name="futureEvents">
        <item>Event 1</item>
        <item>Event 2</item>
        <item>Event 3</item>
        <item>Event 4</item>
    </string-array>
    <string name="title_activity_event_new">EventActivityNew</string>
    <string name="tab_text_1">All Events</string>
    <string name="tab_text_2">Your Events</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

