<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventActivity">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="341dp"
        android:layout_height="43dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/upcoming_events"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/lvItems"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addEvent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="469dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/back"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/events"
        android:textAlignment="center"
        android:textColor="@color/tech_gold"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/addEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="146dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="147dp"
        android:layout_marginBottom="16dp"
        android:onClick="openAddEventActivity"
        android:text="@string/add_event"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="TextContrastCheck" />

    <ListView
        android:id="@+id/lvItems"
        android:layout_width="0dp"
        android:layout_height="503dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


</androidx.constraintlayout.widget.ConstraintLayout>